--- a/index.html
+++ b/index.html
@@ -6,58 +6,29 @@
     <link rel="stylesheet" href="style.css" />
     <title>Caféinamente</title>
   </head>
-
   <body>
     <header>
-      <h1>Receitas com Café</h1>
+      <h1>Receitas com Café ☕️</h1>
     </header>
     <main>
       <section>
         <input type="text" placeholder="Digite o nome da receita" />
-        <button>Pesquisar</button>
+        <button onclick="pesquisar()">Pesquisar</button>
       </section>
 
-      <section class="resultados-pesquisa">
-        <div class="item-resultado">
-          <h2><a href="#" target="_blank">Capuccino</a></h2>
-          <p class="descricao-meta">
-            O capuccino, uma bebida clássica e apreciada em todo o mundo, é a
-            combinação perfeita entre café espresso, leite vaporizado e espuma
-            cremosa.
-          </p>
-          <a href="">Ver mais</a>
-        </div>
-
-        <div class="item-resultado">
-          <h2><a href="#" target="_blank">Tiramisu</a></h2>
-          <p class="descricao-meta">
-            O Tiramisu é uma sobremesa italiana que conquistou paladares ao
-            redor do mundo. Com camadas alternadas de biscoitos macios
-            embebidados em café forte e um creme leve e cremoso feito com
-            mascarpone, ovos e açúcar, essa sobremesa oferece uma combinação
-            perfeita de sabores e texturas.
-          </p>
-          <a href="">Ver mais</a>
-        </div>
-
-        <div class="item-resultado">
-          <h2><a href="#" target="_blank">Frappuccino</a></h2>
-          <p class="descricao-meta">
-            O Frappuccino é uma bebida gelada e cremosa que conquistou o paladar
-            de milhões de pessoas ao redor do mundo. Essa mistura deliciosa de
-            café, leite, gelo e diversos sabores é perfeita para se refrescar
-            nos dias quentes ou para quem busca uma opção energizante.
-          </p>
-          <a href="">Ver mais</a>
-        </div>
+      <section class="resultados-pesquisa" id="resultados-pesquisa">
+        <!-- Os itens serão inseridos aqui pelo JavaScript -->
       </section>
     </main>
-    <footer>
+
+    <!--
+     <footer>
       <p>2024 - Caféinamente. Todos os direitos reservados</p>
       <p>Entre em contato pelo email: cafeinamente@cafe.com.br</p>
     </footer>
+    -->
 
-    <script src="app.js"></script>
     <script src="dados.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
