--- a/index.html
+++ b/index.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Caféinamente</title>
-  </head>
-  <body>
-    <header>
-      <h1>Receitas com Café ☕️</h1>
-    </header>
-    <main>
-      <section>
-        <input type="text" placeholder="Digite o nome da receita" />
-        <button onclick="pesquisar()">Pesquisar</button>
-      </section>
 
-      <section class="resultados-pesquisa" id="resultados-pesquisa">
-        <!-- Os itens serão inseridos aqui pelo JavaScript -->
-      </section>
-    </main>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Caféinamente</title>
+</head>
 
-    <!--
-     <footer>
-      <p>2024 - Caféinamente. Todos os direitos reservados</p>
-      <p>Entre em contato pelo email: cafeinamente@cafe.com.br</p>
-    </footer>
-    -->
+<body>
+  <header>
+    <h1>Receitas com Café ☕️</h1>
+  </header>
+  <main>
+    <section>
+      <input type="text" placeholder="Digite o nome da receita" />
+      <button onclick="pesquisar()">Pesquisar</button>
+    </section>
 
-    <script src="dados.js"></script>
-    <script src="app.js"></script>
-  </body>
+    <section class="resultados-pesquisa" id="resultados-pesquisa">
+      <!-- Os itens serão inseridos aqui pelo JavaScript -->
+    </section>
+  </main>
+
+  <footer class="footer">
+    <p>2024 - Caféinamente. Todos os direitos reservados</p>
+  </footer>
+
+  <script src="dados.js"></script>
+  <script src="app.js"></script>
+</body>
+
 </html>
