link 'ver mais' funciona

--- a/receitas.html
+++ b/receitas.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="receita.style.css" />
     
-    <title>Café Preto - Caféinamente</title>
+    <title>Caféinamente</title>
 </head>
 
 <body>
-    <div class="container" id="mostra-receita">
+    <div class="container" id="detalhes-receita">
         <!-- Os itens serão inseridos aqui pelo JavaScript -->
     </div>
 
@@ -19,7 +19,7 @@
     </footer>
 
     <script src="dados.js"></script>
-    <script src="receita.js"></script>
+    <script src="receitas.js"></script>
 </body>
 
 </html>
