adicionando condições na pesquisa

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </header>
   <main>
     <section>
-      <input type="text" id="campo-pesquisa" placeholder="Digite o nome da receita" />
+      <input type="text" id="campo-pesquisa" placeholder="Digite o nome do seu cafézinho" />
       <button onclick="pesquisar()">Pesquisar</button>
     </section>
 
