--- a/receitas.html
+++ b/receitas.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="receita.style.css" />
-    
+    <link rel="icon" href="favicon_io/favicon.ico"type="image/x-icon">
     <title>Caféinamente</title>
 </head>
 
